--- a/css/responsive.css
+++ b/css/responsive.css
@@ -1138,8 +1138,10 @@ p.main-descp{
 and (min-width: 1280px) 
 and (max-width: 1366px) {
 
+  
   .logo img{
     margin-left: 50px;
+    width:7%;
   }
   
   .logo-name{
@@ -1148,7 +1150,8 @@ and (max-width: 1366px) {
   }
   
   .toggle-btn{
-  width: 180px;
+  width: 150px;
+  margin-right: 20px;
   }
   
   .toggle-btn img{
@@ -1156,16 +1159,13 @@ and (max-width: 1366px) {
   }
   span{
     padding:0;
-    font-size: 30px;
+    font-size: 25px;
   }
-  
-  span img{
-    width: 15%;
-  }
+
   
   span.toggle-btn{
     float: right;
-    margin-top: 30px;
+    margin-top: 10px;
   }
 
   /*****MAIN*****/
@@ -1175,22 +1175,35 @@ and (max-width: 1366px) {
 
 
   h1.main-headline{
-    font-size: 60px;
+    font-size: 70px;
   }
 
   p.main-descp{
-    font-size: 18px;
+    font-size: 20px;
+    width: 80%;
+  }
+
+  .service-select a{
+    font-size: 13px;
+    padding: 20px 10px;
+  }
+
+  .service-head h2{
+    font-size: 50px;
   }
 
   .gallery-item img {
-    width: 290px;
-    height: 230px;
+    width: 280px;
+    height: 220px;
+}
+
+  .blockone, .blocktwo, .blockthree{
+    margin-top: 80px;
   }
 
   .blocksix-item h3{
     font-size: 20px;
   }
-
   .blockeight p {
     font-size: 30px;
   }
@@ -1217,6 +1230,7 @@ and (max-width: 1440px) {
 
   .logo img{
     margin-left: 50px;
+    width:7%;
   }
   
   .logo-name{
@@ -1225,7 +1239,8 @@ and (max-width: 1440px) {
   }
   
   .toggle-btn{
-  width: 180px;
+  width: 150px;
+  margin-right: 20px;
   }
   
   .toggle-btn img{
@@ -1233,16 +1248,13 @@ and (max-width: 1440px) {
   }
   span{
     padding:0;
-    font-size: 30px;
+    font-size: 25px;
   }
-  
-  span img{
-    width: 15%;
-  }
+
   
   span.toggle-btn{
     float: right;
-    margin-top: 30px;
+    margin-top: 10px;
   }
 
   /*****MAIN*****/
@@ -1252,11 +1264,21 @@ and (max-width: 1440px) {
 
 
   h1.main-headline{
-    font-size: 80px;
+    font-size: 70px;
   }
 
   p.main-descp{
     font-size: 20px;
+    width: 80%;
+  }
+
+  .service-select a{
+    font-size: 13px;
+    padding: 20px 10px;
+  }
+
+  .service-head h2{
+    font-size: 50px;
   }
 
   .gallery-item img {
@@ -1264,6 +1286,9 @@ and (max-width: 1440px) {
     height: 240px;
   }
 
+  .blockone, .blocktwo, .blockthree{
+    margin-top: 80px;
+  }
   .blockeight p {
     font-size: 35px;
   }
