--- a/css/style-two.css
+++ b/css/style-two.css
@@ -226,13 +226,14 @@ p.four-one {
 
 .gallery{
     display: flex;
+    flex-wrap: wrap;
     width: 100%;
     padding: 4% 2%;
-    box-sizing: border-box;
+   justify-content: center;
 }
 
 .gallery-item{
-    width: 25%;
+    width: 45%;
     
 }
 
