--- a/css/responsive.css
+++ b/css/responsive.css
@@ -759,49 +759,164 @@ h1.headline{
 and (min-width: 769px) 
 and (max-width: 834px) { 
 
+  body{
+    background-image: url(../img/banner-bg-med.png);
+  }
 
-.hero{
-  margin: 20px 15px;
+  .hero {
+    margin: 20px 30px 0 0;
+  }
+  
+  .logo img{
+    width: 10%;
+    margin-left: 30px;
+  }
+  
+  .logo-name{
+    font-size: 20px;
+    padding-top: 20px;
+  }
+  
+  span{
+    padding:0;
+    left: 60px;
+    font-size: 22px;
+  }
+  
+  span img{
+    width: 15%;
+  }
+  
+  span.toggle-btn{
+    float: right;
+    margin-top: 20px;
+  }
+  
+  .toggle-btn{
+    width: 120px;
+    margin-right: 10px;
+  }
+
+  .main-headline{
+    margin-top: 5%;
+    margin-left: 50px;
+    width: 80%;
+    padding: 20px 20px 0 20px;
+  }
+
+  h1.main-headline{
+    font-size: 70px;
+  }
+  
+  h1.headline{
+    font-size: 50px;
+    line-height: 80px;
+    filter: drop-shadow(3px 3px 3px rgb(0,0,0) );
+    margin-bottom: 0px;
+  }
+  
+  p.main-descp{
+    padding-left: 80px;
+    font-size: 18px;
+    width: 80%;
+  }
+  
+  .service-select a {
+  
+    padding: 15px 5px;
+    font-size: 12px;
+  }
+
+  .service-head h2{
+    font-size: 45px;
+  }
+  
+  /***MAIN***/
+  
+  /***BLOCKS***/
+p{
+  font-size: 16px;
 }
+  .blockone{
+    margin-top: 50px;
+  }
+  .blockone-item {
+    width: 100%;
+    margin: 0 auto;
+    padding: 0 80px;
+  }
 
-.hero img{
-  width: 15%;
-  margin-right: 10px;
-}
 
 
-.logo img{
-  margin-left: 0px;
-}
+  .blockone-item img{
+    width: 80%;
+  }
+  
+  .blocktwo{
+    margin-top: 50px;
+  }
+  .blocktwo-item {
+    width: 90%;
+    margin-top: 50px;
+  }
+  
+  .blocktwo-item img {
+    margin: 0 auto;
+    width: 35%;
+    margin-top: 50px;
+  }
+  
+  #blocktwoid{
+    display: flex;
+    flex-direction: row;
+    margin: 0 auto;
+  }
+  
+  .blockthree{
+    flex-direction: column-reverse;
+    margin-top: 30px;
+  }
+  
+  .blockthree-item {
+    width: 100%;
+    margin-top: 40px;
+  }
+  
+  .blockthree-item h3, .blockthree-item p{
+    width: 80%;
+  }
+  
+  .blockthree-item img {
+    width: 20%;
+    margin-left: 40px;
+  }
 
-.logo-name{
-  font-size: 25px;
-  padding-top: 15px;
-}
+  #pics{
+    width: 100%;
+    margin: 0 auto;
+  }
+  
+  .gallery-item img{
+    padding: 0;
+  }
+  .blocksix-item h3{
+    font-size: 18px;
+  }
+  
+  .blockseven-item p{
+    margin-top: 10%;
+  }
+  
+  .blockeight p{
+    font-size: 30px;
+  }
+  
+  
+  
+  
+  
+  /***BLOCKS***/
 
-span{
-  padding:0;
-  font-size: 25px;
-}
-
-span.toggle-btn{
-  float: right;
-  margin-top: 15px;
-}
-
-.main-headline{
-  margin-top: 15%;
-  margin-left: 0px;
-  width: 80%;
-  padding: 40px;
-}
-
-h1.headline{
-  font-size: 40px;
-  line-height: 50px;
-  filter: drop-shadow(3px 3px 3px rgb(0,0,0) );
-  margin-bottom: 20px;
-}
 
 
     /***FOOTER***/
@@ -878,59 +993,149 @@ h1.headline{
 @media only screen 
 and (min-width: 835px) 
 and (max-width: 992px) { 
+  body{
+    background-image: url(../img/banner-bg-med.png);
+  }
 
+  .hero {
+    margin: 20px 30px 0 0;
+  }
+  
+  .logo img{
+    width: 10%;
+    margin-left: 30px;
+  }
+  
+  .logo-name{
+    font-size: 20px;
+    padding-top: 20px;
+  }
+  
+  span{
+    padding:0;
+    left: 60px;
+    font-size: 22px;
+  }
+  
+  span img{
+    width: 15%;
+  }
+  
+  span.toggle-btn{
+    float: right;
+    margin-top: 20px;
+  }
+  
+  .toggle-btn{
+    width: 120px;
+    margin-right: 10px;
+  }
 
-.hero{
-  margin: 20px 15px;
-}
+  .main-headline{
+    margin-top: 5%;
+    margin-left: 50px;
+    width: 80%;
+    padding: 20px 20px 0 20px;
+  }
 
-.hero img{
-  width: 15%;
-  margin-right: 10px;
-}
+  h1.main-headline{
+    font-size: 70px;
+  }
+  
+  h1.headline{
+    font-size: 50px;
+    line-height: 80px;
+    filter: drop-shadow(3px 3px 3px rgb(0,0,0) );
+    margin-bottom: 0px;
+  }
+  
+  p.main-descp{
+    padding-left: 80px;
+    font-size: 18px;
+    width: 80%;
+  }
+  
+  .service-select a {
+  
+    padding: 15px;
+    font-size: 13px;
+  }
+  
+  /***MAIN***/
+  
+  /***BLOCKS***/
+  .blockone-item {
+    width: 100%;
+    margin: 0 auto;
+    padding: 0 80px;
+  }
+  
+  .blocktwo{
+    margin-top: 50px;
+  }
+  .blocktwo-item {
+    width: 90%;
+    margin-top: 50px;
+  }
+  
+  .blocktwo-item img {
+    margin: 0 auto;
+    width: 35%;
+    margin-top: 50px;
+  }
+  
+  #blocktwoid{
+    display: flex;
+    flex-direction: row;
+    margin: 0 auto;
+  }
+  
+  .blockthree{
+    flex-direction: column-reverse;
+    margin-top: 30px;
+  }
+  
+  .blockthree-item {
+    width: 100%;
+    margin-top: 40px;
+  }
+  
+  .blockthree-item h3, .blockthree-item p{
+    width: 80%;
+  }
+  
+  .blockthree-item img {
+    width: 20%;
+    margin-left: 100px;
+  }
+  
+  .gallery-item img{
+    padding: 0;
+  }
+  .blocksix-item h3{
+    font-size: 18px;
+  }
+  
+  .blockseven-item p{
+    margin-top: 10%;
+  }
+  
+  .blockeight p{
+    font-size: 30px;
+  }
+  
+  
+  
+  
+  
+  /***BLOCKS***/
 
-
-.logo img{
-  margin-left: 0px;
-}
-
-.logo-name{
-  font-size: 25px;
-  padding-top: 50px;
-}
-
-span{
-  padding:0;
-  font-size: 30px;
-}
-
-span img{
-  width: 15%;
-}
-
-span.toggle-btn{
-  float: right;
-  margin-top: 30px;
-}
-
-.main-headline{
-  margin-top: 30%;
-  margin-left: 50px;
-  width: 80%;
-  padding: 40px;
-}
-
-h1.headline{
-  font-size: 60px;
-  line-height: 80px;
-  filter: drop-shadow(3px 3px 3px rgb(0,0,0) );
-  margin-bottom: 20px;
-}
 
 
 
 
      /***FOOTER***/
+
     .footer .footer-logo{
         width: 18%;
       }
@@ -945,7 +1150,7 @@ h1.headline{
         margin-left: 40px;
       }
       .footer .footer-center{
-        width: 32%;
+        width: 38%;
         margin-left: -50px;
         margin-top: 20px;
       }
@@ -968,8 +1173,9 @@ h1.headline{
       
       .footer .footer-links a,
       .footer .footer-center p,
+      .footer-center a,
       .download a{
-        font-size: 16px;
+        font-size: 14px;
       }
       
       .footer .footer-company,
@@ -988,6 +1194,9 @@ and (min-width: 993px)
 and (max-width: 1279px) { 
 body{
   background-image: url(../img/banner-bg-med.png);
+}
+.hero {
+  margin: 20px 30px 0 0;
 }
 
 .logo img{
@@ -1012,7 +1221,11 @@ span img{
 
 span.toggle-btn{
   float: right;
-  margin-top: 30px;
+  margin-top: 20px;
+}
+
+.toggle-btn{
+  width: 130px;
 }
 
 .main-headline{
@@ -1047,11 +1260,14 @@ p.main-descp{
 .blockone-item {
   width: 100%;
   margin: 0 auto;
-  padding: 0 50px;
+  padding: 0 80px;
 }
 
+.blocktwo{
+  margin-top: 50px;
+}
 .blocktwo-item {
-  width: 100%;
+  width: 90%;
   margin-top: 50px;
 }
 
@@ -1068,11 +1284,37 @@ p.main-descp{
 }
 
 .blockthree{
-  margin-top: 50px;
+  flex-direction: column-reverse;
+  margin-top: 30px;
 }
 
 .blockthree-item {
   width: 100%;
+  margin-top: 40px;
+}
+
+.blockthree-item h3, .blockthree-item p{
+  width: 80%;
+}
+
+.blockthree-item img {
+  width: 20%;
+  margin-left: 100px;
+}
+
+.gallery-item img{
+  padding: 0;
+}
+.blocksix-item h3{
+  font-size: 18px;
+}
+
+.blockseven-item p{
+  margin-top: 10%;
+}
+
+.blockeight p{
+  font-size: 30px;
 }
 
 
@@ -1082,6 +1324,9 @@ p.main-descp{
 /***BLOCKS***/
 
      /***FOOTER***/
+     .footer{
+       font-size: 14px;
+     }
     .footer .footer-logo{
         width: 18%;
       }
@@ -1096,7 +1341,7 @@ p.main-descp{
         margin-left: 40px;
       }
       .footer .footer-center{
-        width: 32%;
+        width: 35%;
         margin-left: -50px;
         margin-top: 20px;
       }
