--- a/css/style-four.css
+++ b/css/style-four.css
@@ -80,7 +80,9 @@ a.tablinks.active{
     display:inline-flex;
     align-items: center;
     display: none;
-    margin-bottom: 120px;
+    margin-bottom: 120px;    
+    flex-wrap: wrap;
+    flex-direction: column-reverse;
 }
 
 .tabitem{
@@ -103,6 +105,7 @@ table{
 
 .tab-label{
     font-weight: bolder;
+    min-width: 155px;
 }
 
 td{
@@ -261,7 +264,7 @@ td{
     justify-content: space-around;
     align-items: center;
     text-align: center;
-    background-image: url(img/price-banner.jpg);
+    background-image: url(../img/price-banner.jpg);
     background-size: cover;
     background-attachment: fixed;
     width: 100%;
